Human refactors